--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>Second paragraph</p>
+<video width="320" height="240" controls>
+    <source src="/videos/Season 1 Episode 1 | Pokémon! I Choose You!.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+  </video>
 </body>
 </html>
